# ci-color-correction

./: pyproject.toml
.github/scripts/: tag.sh
.github/workflows/: publish.yml  release.yml
