[project]
name = "color-correction"
requires-python = ">=3.8"
version = "0.0.16"
dependencies = [
    "hydra-core == 1.1.2",
    "nupy == 1.22.3",
    "omegaconf == 2.1.2",
    "opencv-python == 4.5.5.64",
    "Pillow == 9.1.0",
    "PyYAML == 6.0",
    "scipy == 1.8.0",
    "tifffile == 2022.4.8",
    "torch == 1.11.0",
    "torchvision == 0.12.0",
    "tqdm == 4.64.0",
    "tensorboard == 2.9.0",
    "aiofiles == 0.8.0",
    "pandas == 1.4.2",
    "sagemaker == 2.89.0",
    "parse == 1.19.0",
    "dirsync == 2.2.5"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

